--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -7,6 +7,24 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        
+        <TextBox Name="ResultTextBox" HorizontalAlignment="Stretch" VerticalAlignment="Top" FontSize="24" Margin="10" IsReadOnly="True" />
+        <UniformGrid Rows="5" Columns="4" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="10,60,10,10">
+            <Button Content="7" Click="NumberButton_Click"/>
+            <Button Content="8" Click="NumberButton_Click"/>
+            <Button Content="9" Click="NumberButton_Click"/>
+            <Button Content="/" Click="OperatorButton_Click"/>
+            <Button Content="4" Click="NumberButton_Click"/>
+            <Button Content="5" Click="NumberButton_Click"/>
+            <Button Content="6" Click="NumberButton_Click"/>
+            <Button Content="*" Click="OperatorButton_Click"/>
+            <Button Content="1" Click="NumberButton_Click"/>
+            <Button Content="2" Click="NumberButton_Click"/>
+            <Button Content="3" Click="NumberButton_Click"/>
+            <Button Content="-" Click="OperatorButton_Click"/>
+            <Button Content="0" Click="NumberButton_Click"/>
+            <Button Content="C" Click="ClearButton_Click"/>
+            <Button Content="=" Click="EqualButton_Click"/>
+            <Button Content="+" Click="OperatorButton_Click"/>
+        </UniformGrid>
     </Grid>
 </Window>
